--- a/main.css
+++ b/main.css
@@ -73,6 +73,7 @@ h1{
     background-color: rgba(50, 50, 50, 0.7555);
     height: 100px;
     backdrop-filter: blur(3px);
+    /* backdrop-filter: brightness(0%); */
 
     width: 100%;
     text-align: center;
@@ -95,7 +96,9 @@ h1{
 
 .main-nav ul li a{
   /* padding: 1% 8%; */
-  font-size: 90%;
+  font-size: 70%;
+  font-family: 'Heebo';
+  text-transform: uppercase;
   /* border: solid 1px #eee; */
 }
 .main-nav ul li a:after{
@@ -188,14 +191,15 @@ main{
   background-size: cover;
   width: 100%;
   /* -webkit-backdrop-filter: blur(3px); */
-  height: calc(100vh - 100px);
+  height: 100vh;
   background-position: center;
   text-align: center;
   display: flex;
+  flex-direction: row;
+
   align-items: center;
   /* vertical-align: middle; */
   align-self: center;
-  justify-content: center;
   text-align: left;
   
   
@@ -223,9 +227,7 @@ main{
 
 
 .mainBanner{
-  transform: translate(-2.5rem, 5rem);
-  /* padding: 10px 30px; */
-  /* backdrop-filter: blur(3px); */
+  transform: translate( 15vw, 10%);
 }
 
 .fab, .far{
@@ -266,7 +268,7 @@ main{
   min-height: calc(100vh - 100px);
   /* max-height: calc(100vh - 100px); */
   color: rgba(0, 0, 255, 1);
-  filter: blur(2px);
+  filter: blur(2px) brightness(70%);
   z-index: 0;
 }
 
@@ -281,13 +283,44 @@ main{
 
 
 
+
   
   /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
-  @media screen and (max-height: 450px) {
+  @media only screen and (min-width: 960px) {
+    
+    
     .overlay a {font-size: 20px}
     .overlay .closebtn {
       font-size: 40px;
-      top: 15px;
-      right: 35px;
+      top: 15%;
+      right: 10%;
     }
+
+    .main-nav{
+      height: 50px
+    }
+    h1{
+      float: left;
+      line-height: 1;
+      margin-left: 10%;
+      border-right: solid 2px #eee;
+      padding: 2.5px 5%;
+    }
+    .main-nav ul{
+      margin: auto 10% auto 10%;
+      line-height: 2.05;
+    }
+
+    #mySearch{
+      width: 30%;
+    }
+    .name{
+      font-size: 3.7rem;
+      color: #eee;
+      line-height: 3.5rem
+    }
+
+    
+
+
   }
