--- a/main.css
+++ b/main.css
@@ -103,11 +103,50 @@ h1{
 }
 .main-nav ul li a:after{
   display: block;
+  content: '';
   border-bottom: 3px solid #eee;
   transform: scaleX(0);
-  transition: transform 0.25s ease;
-  transform-origin: 0% 50%;
+  transition: transform 0.25s ease-in-out;
+  /* transform-origin: 0% 50%; */
+  padding: 0 2rem;
 }
+.main-nav ul li a:before{
+  content: '';
+}
+
+.main-nav ul li a:hover::after{
+  transform: scaleX(1);
+}
+
+.fab, .far{
+  padding: 0.5rem;
+  border-radius: 50%;
+  font-size: 2rem;
+  margin: 0 10px 0 0;
+  /* width: 0.7rem; */
+
+  /* margin: 0 0.1rem 0 0.1rem; */
+}
+
+.fab:hover, .far:hover{
+  opacity: 0.7;
+}
+.fa-github{
+  background-color: #222;
+  color: #eee;
+}
+
+.fa-envelope{
+  color: #DD4638;
+  background-color: #ddd;
+
+}
+
+.fa-linkedin{ 
+  color: #eee;
+  background-color: #0E76A8;
+}
+
 .main-nav ul li a:after:hover{
   transform: scaleX(1);
 }
@@ -115,7 +154,7 @@ h1{
 
 /* The Overlay (background) */
 .overlay {
-  backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px) brightness(70%);
   height: 100%;
   width: 0;
   position: fixed; /* Stay in place */
@@ -230,35 +269,6 @@ main{
   transform: translate( 15vw, 10%);
 }
 
-.fab, .far{
-  padding: 0.5rem;
-  border-radius: 50%;
-  font-size: 2rem;
-  margin: 0 10px 0 0;
-  /* width: 0.7rem; */
-
-  /* margin: 0 0.1rem 0 0.1rem; */
-}
-
-.fab:hover, .far:hover{
-  opacity: 0.7;
-}
-.fa-github{
-  background-color: #222;
-  color: #eee;
-}
-
-.fa-envelope{
-  color: #DD4638;
-  background-color: #ddd;
-
-}
-
-.fa-linkedin{ 
-  color: #eee;
-  background-color: #0E76A8;
-}
-
 #bgVideo{
   min-width: 100%;
   /* max-width: 100%; */
@@ -272,6 +282,14 @@ main{
   z-index: 0;
 }
 
+.hfg{
+  font-family: 'Odibee Sans';
+  font-size: 2.5rem;
+
+}
+.overlay-elements p{
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 
 
@@ -319,7 +337,18 @@ main{
       color: #eee;
       line-height: 3.5rem
     }
+    .description{
+      font-size: 1.3rem;
+      line-height: 1.2rem;
+    }
+    .fab, .far{
+      font-size: 2.7rem;
+      padding: 10px;
 
+    }
+    .main-nav ul li a:after{
+      padding:0 3rem;
+    }
     
 
 
