--- a/main.css
+++ b/main.css
@@ -225,7 +225,7 @@ h2{
 }
 
 main{
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)) , url('webText.jpg') ;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)) , url('video1.jpeg') ;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
