download font correction

--- a/resume/resume.css
+++ b/resume/resume.css
@@ -213,6 +213,7 @@ font-size: 1.1rem;
   margin-top: 1rem;
   text-align: center;
   margin: 20px auto 50px auto;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .fas{
