--- a/resume/resume.css
+++ b/resume/resume.css
@@ -196,7 +196,23 @@ line-height: 1.3rem;
 font-size: 1.1rem;
 }
 
+.bg{
+  position: fixed;
+  top: 0;
+  left: 0;
+  filter: blur(2px) brightness(80%);
+  background: url('../video1.jpeg') ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  /* -webkit-backdrop-filter: blur(3px); */
+  height: 100vh;
+  background-position: center;
+  z-index: -1;
+}
+
 .main{
+  z-index: 200;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -207,7 +223,7 @@ font-size: 1.1rem;
 
 #res{
     width: 100%;
-    margin: -20% auto 0 auto;
+    margin: -54px auto 0 auto;
 }
 #downloadLink{
   margin-top: 1rem;
