--- a/main.css
+++ b/main.css
@@ -62,9 +62,7 @@ font-family: 'Saira Semi Condensed', ; */
 
 h1{
     font-size: 1.9rem;
-    line-height: 1.4;
-    margin-top: 7px;
-    font-family: 'Roboto', sans-serif;
+    
     
   }
   
@@ -294,6 +292,21 @@ main{
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#logoImg{
+  float: left;
+  height: 1.9rem;
+  width: 3.0132rem;
+  margin-top: 5px;
+
+}
+#mainBrand{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  line-height: 1.4;
+  margin-top: 7px;
+  font-family: 'Roboto', sans-serif;
+}
 
 
 
@@ -321,7 +334,7 @@ main{
     .main-nav{
       height: 50px
     }
-    h1{
+    #mainBrand{
       float: left;
       line-height: 1;
       margin-left: 10%;
@@ -353,6 +366,11 @@ main{
     .main-nav ul li a:after{
       padding:0 3rem;
     }
+    #logoImg{
+      line-height: 2;
+      margin-top: 0px;
+    } 
+    
     
 
 
