--- a/resume/resume.css
+++ b/resume/resume.css
@@ -57,9 +57,6 @@ table {
 
 h1{
   font-size: 1.9rem;
-  line-height: 1.4;
-  margin-top: 7px;
-  font-family: 'Roboto', sans-serif;
   
 }
 
@@ -263,7 +260,21 @@ font-size: 1.1rem;
 #downloadLink:hover{
   opacity: 80%;
 }
+#logoImg{
+  float: left;
+  height: 1.9rem;
+  width: 3.0132rem;
+  margin-top: 5px;
 
+}
+#mainBrand{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  line-height: 1.4;
+  margin-top: 7px;
+  font-family: 'Roboto', sans-serif;
+}
 
 
 
@@ -302,7 +313,7 @@ font-size: 1.1rem;
   main{
     text-align: center;
   }
-  h1{
+  #mainBrand{
     float: left;
     line-height: 1;
     margin-left: 10%;
@@ -330,6 +341,10 @@ font-size: 1.1rem;
   #downloadLink{
     margin: 25px auto 100px auto;
   }
+  #logoImg{
+      line-height: 2;
+      margin-top: 0px;
+    } 
 
 
 }
